RESOLVED FIXED303657
TestWebKitAPI.CaptionPreferenceTests.CaptionStyleMenu tests are broken
https://bugs.webkit.org/show_bug.cgi?id=303657
Summary TestWebKitAPI.CaptionPreferenceTests.CaptionStyleMenu tests are broken
phinehas133
Reported 2025-12-05 13:22:31 PST
see title
Attachments
phinehas133
Comment 1 2025-12-05 13:22:32 PST
phinehas133
Comment 2 2025-12-05 13:27:17 PST
EWS
Comment 3 2025-12-08 16:21:26 PST
Committed 304128@main (817c0e6ac436): <https://commits.webkit.org/304128@main> Reviewed commits have been landed. Closing PR #54950 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.