TestWebKitAPI.CaptionPreferenceTests.CaptionStyleMenu tests are broken https://bugs.webkit.org/show_bug.cgi?id=303657 rdar://165741859

Reviewed by Aditya Keerthi.

Make menuController an autoreleased object when HAVE_AVLEGIBLEMEDIAOPTIONSMENUCONTROLLER is
available for iOS. Remove adoptNS from m_styleMenuController assignment since menuController
returns an autoreleased object, preventing overrelease.

* Source/WebKit/UIProcess/ios/WKActionSheetAssistant.mm:
(-[WKActionSheetAssistant showMediaControlsContextMenu:items:frameInfo:identifier:completionHandler:]):
(-[WKActionSheetAssistant showCaptionDisplaySettingsMenu:withOptions:completionHandler:]):
* Source/WebKit/UIProcess/ios/_WKCaptionStyleMenuControllerIOS.mm:
(+[WKCaptionStyleMenuController menuController]):
* Tools/TestWebKitAPI/Tests/WebCore/cocoa/CaptionPreferencesTests.mm:
(TestWebKitAPI::CaptionPreferenceTests::ensureController):

Canonical link: https://commits.webkit.org/304128@main