Source/WebKit/UIProcess/ios/WKActionSheetAssistant.mm
@@ -902,7 +902,7 @@ ALLOW_DEPRECATED_DECLARATIONS_END
         return;
     }
 
-    _captionStyleMenuController = adoptNS([WKCaptionStyleMenuController menuController]);
+    _captionStyleMenuController = [WKCaptionStyleMenuController menuController];
     [_captionStyleMenuController setDelegate:self];
 
     NSArray<UIMenuElement *> *menuItems = [self _uiMenuElementsForMediaControlContextMenuItems:WTFMove(itemsToPresent)];
@@ -970,7 +970,7 @@ ALLOW_DEPRECATED_DECLARATIONS_END
 #if ENABLE(VIDEO) && USE(UICONTEXTMENU)
 - (void)showCaptionDisplaySettingsMenu:(WebCore::HTMLMediaElementIdentifier)identifier withOptions:(const WebCore::ResolvedCaptionDisplaySettingsOptions&)options completionHandler:(CompletionHandler<void(Expected<void, WebCore::ExceptionData>)>&&)completionHandler
 {
-    _captionStyleMenuController = adoptNS([WKCaptionStyleMenuController menuController]);
+    _captionStyleMenuController = [WKCaptionStyleMenuController menuController];
     [_captionStyleMenuController setDelegate:self];
 
     _mediaControlsContextMenu = [_captionStyleMenuController captionStyleMenu];
